# wowparser

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  Makefile.win  Makefile.windows  README  README.md  WoWParser.sln  WoWParser.vcxproj  WoWParser.vcxproj.filters  binaryreader.vcxproj  binaryreader.vcxproj.filters  build.sh  index.php  makefile  revision.bat  revision.sh  staticdata.sh  wowparser.sln  wowparser3.dev  wowparser3.layout  wowparser3.sln  wowparser3.vcproj  wowparser3.vcxproj  wowparser3.vcxproj.filters  wowparser4.xml
.cargo/: pre-build
BinaryReader/: BinaryReader.vcxproj
BinaryReader/src/: main.cpp
Release/: wowparser3_binaryreader.xml
lib/tinyxml2/: tinyxml2.h
old/src/: wowparser2_reader_85.cpp  wowparser2_reader_98.cpp  wowparser2_writer_85.cpp  wowparser2_writer_98.cpp
parser/: Config.php  FindFiles.php  Log.php  Version.php
platform/linux32/: CMakeLists.txt
platform/linux64/: CMakeLists.txt
platform/win32/: CMakeLists.txt
platform/win64/: CMakeLists.txt
public/: index.php
src/: ProgressBar.cpp  ProgressBar.h  binaryreader  config.cpp  config.h  config_reader.cpp  config_reader.h  config_reader.rs  config_xml.cpp  config_xml.h  dbc_reader.cpp  dbc_reader.h  dirent.h  findfiles.cpp  findfiles.h  findfiles.rs  log.cpp  log.h  log.rs  main.cpp  main.php  main.rs  module_binary_reader.cpp  module_binary_reader.h  module_config_reader.cpp  module_config_reader.h  module_config_reader.rs  module_csv_reader.cpp  module_csv_reader.h  module_csv_writer.cpp  module_csv_writer.h  module_dbc_reader.cpp  module_dbc_reader.h  module_dbc_writer.cpp  module_dbc_writer.h  module_file_reader.cpp  module_file_reader.h  module_parser.cpp  module_parser.h  module_sql_writer.cpp  (+9 more)
src/Helpers/Config/: Utility.php
src/Parser/: Config.php  Log.php  Version.php
src/csv/: shared.cpp  shared.h
src/linux/: getch.h
src/platform/win32/: dirent.h
src_csvreader_dbcwriter/: csv_reader.h  dbc_writer.h  shared.h
src_modules_rewritte/: main.cpp  pch.h  shared.h  tinyxml2.cpp
src_modules_test/: csv_reader.cpp  dbc_reader.h  dbc_writer.cpp  log.h  main_csv_reader.cpp  wdb_reader_predicted_alpha.cpp  wdb_reader_predicted_alpha.txt
